--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "build",
             "environment": [],
-            "externalConsole": true
+            "internalConsoleOptions": "openOnSessionStart"
         },
     ]
 }
