--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/vcad.exe",
+            "program": "${workspaceRoot}/vcad/target/debug/vcad.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
